[package]
name = "rust_http_bellhop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bellhop"
path = "src/lib/mod.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] } # reqwest with JSON parsing support
tokio = { version = "1", features = ["full"] }