[package]
name = "rust_http_bellhop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bellhop"
path = "src/lib/mod.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
structopt = "0.3.26"
thiserror = "1"
reqwest = { version = "0.11.18", features = ["blocking", "json", "cookies", ] }
http = "0.2.9"